letter-spacing for a fixed

--- a/css/shop-collection.css
+++ b/css/shop-collection.css
@@ -10,6 +10,7 @@
     font-family: 'PT Sans', sans-serif;
     font-size: 14px;
     text-decoration: none;
+    letter-spacing: normal;
     color: var(--brand_color-main);
     font-weight: 700;
 }
